# spyder-remote-services

./: environment.yaml  environment.yml  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: installer.sh
spyder_remote_server/: __main__.py  jupyterhub_config.py  pyinstaller.py  run.py  run_jupyterhub.py  run_service.py  utils.py
spyder_remote_server/api/: __init__.py
spyder_remote_server/app/: routes.py
spyder_remote_server/app/kernel_manager/: core.py  handlers.py
spyder_remote_server/jupyter_server/: kernelmanager.py  serverapp.py
spyder_remote_server/jupyterhub/: app.py  proxy.py  singleuser.py  spawner.py
spyder_remote_server/services/: routes.py
spyder_remote_server/services/kernel_manager/: core.py  handlers.py
spyder_remote_services/: __init__.py  app.py  subcommands.py
spyder_remote_services/jupyter_client/: manager.py
spyder_remote_services/jupyter_server/: kernelmanager.py
spyder_remote_services/services/files/: base.py  handlers.py
spyder_remote_services/services/fsspec/: handlers.py  mixin.py
tests/: Dockerfile  client_api.py  docker-compose.yaml
