[project]
name = "spyder-remote-services"
authors = [{name = "Hendrik Louzada", email = "hendriklouzada@gmail.com"}]
description = "A remote server for Spyder IDE"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "jupyter_server >= 1.24.0",
    "jupyter_client >= 8.6.1",
    "spyder-kernels >= 3.0.0b7,<3.0.0b8",
]

[project.scripts]
spyder-remote-server = "spyder_remote_services.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest >= 7.3.1",
    "ruff >= 0.4.1",
    #"pyinstaller >= 5.10.1"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
