[project]
name = "spyder-remote-services"
authors = [{name = "Hendrik Louzada", email = "hendriklouzada@gmail.com"}]
description = "A remote server for Spyder IDE"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "jupyter_server >=1.24.0,<2.0",
    "jupyter_client >=8.6.1,<9.0",
]

[tool.setuptools.dynamic]
version = {attr = "spyder_remote_services.__version__"}

[project.scripts]
spyder-server = "spyder_remote_services.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest >= 7.3.1",
    "ruff >= 0.4.1",
    #"pyinstaller >= 5.10.1"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
